<resources>
    <string name="app_name">Inventory App</string>
    <string name="supplier_name">SUPPLIER NAME</string>
    <string name="supplier_number">SUPPLIER PH. NO.</string>
    <string name="failed_error">Insertion of new row failed</string>
    <string name="success_toast">Insertion of new row was successful</string>
    <string name="last_product_message">This was the last product, Contact your seller for new products</string>
    <string name="insert_product_error">Error inserting new product</string>
    <string name="insert_product_success">Insertion of new product was successful</string>
    <string name="update_product_error">Error updating the product</string>
    <string name="update_product_success">Product was updated successfully</string>
    <string name="unsaved_dialog_message">You have unsaved changes</string>
    <string name="unsaved_positive_response">Exit</string>
    <string name="unsaved_negative_response">Keep Editing</string>
    <string name="confirm_dialog_message">Are you sure to delete this product ?</string>
    <string name="confirm_dialog_positive">yes</string>
    <string name="confirm_dialog_negative">No</string>
    <string name="delete_failed_message">Failed to delete the pet</string>
    <string name="delete_success_message">Product was removed successfully</string>
    <string name="product_name">PRODUCT NAME</string>
    <string name="product_name_hint">Enter Product Name</string>
    <string name="product_cost">PRODUCT COST</string>
    <string name="product_cost_hint">Enter Product Cost</string>
    <string name="supplier_name_hint">Enter Supplier Name</string>
    <string name="supplier_number_hint">Enter Supplier Phone Number</string>
    <string name="quantity">QUANTITY</string>
    <string name="quantity_hint">Enter Number of Products</string>
    <string name="increase_quantity">+1</string>
    <string name="decrease_quantity">-1</string>
    <string name="empty_list_message">No products left in stock</string>
    <string name="productName">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity_text">Quantity</string>
    <string name="sell">SELL</string>
    <string name="invalid_values_message">Please fill all the values.</string>
    <string name="invalid_number_message">Please enter valid phone number</string>
    <string name="invalid_message">Please enter valid product cost and quantity</string>
</resources>