<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/sixteen_dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/in_product_name"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/product_name_hint"
            android:inputType="text"
            android:textSize="@dimen/textsize_twelve_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/product_cost"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/in_product_cost"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/product_cost_hint"
            android:inputType="number"
            android:textSize="@dimen/textsize_twelve_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/supplier_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/in_supplier_name"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/supplier_name_hint"
            android:inputType="text"
            android:textSize="@dimen/textsize_twelve_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/supplier_number"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/in_supplier_number"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/supplier_number_hint"
            android:inputType="phone"
            android:textSize="@dimen/textsize_twelve_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/in_quantity"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/quantity_hint"
            android:inputType="number"
            android:textSize="@dimen/textsize_twelve_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/quantity_minus"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/corner_radius_four_dp"
            android:layout_weight="1"
            android:text="@string/decrease_quantity" />

        <Button
            android:id="@+id/quantity_plus"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/corner_radius_four_dp"
            android:layout_weight="1"
            android:text="@string/increase_quantity" />

    </LinearLayout>
</LinearLayout>