<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/eightyfive_dp"
    android:layout_margin="@dimen/twelve_dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="@dimen/corner_radius_four_dp"
        card_view:cardElevation="@dimen/card_height_two_dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/twelve_dp">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero_dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/productName"
                android:textSize="@dimen/textsize_sixteen_sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero_dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="@dimen/textsize_fourteen_sp" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero_dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quantity_text"
                android:textSize="@dimen/textsize_fourteen_sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:focusable="false"
            android:text="@string/sell" />
    </android.support.v7.widget.CardView>
</RelativeLayout>